// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerChartLabelBadge Render the chart label in one line. 1`] = `
<Fragment>
  <span>
    <span>
      high_sum(nginx.access.body_sent.bytes) over nginx.access.remote_ip (population-03)
       – 
    </span>
    <ExplorerChartLabelBadge
      entity={
        Object {
          "$$hashKey": "object:813",
          "fieldName": "nginx.access.remote_ip",
          "fieldValue": "72.57.0.53",
        }
      }
    />
     
     
    <span>
      <EuiIconTip
        content={
          <ExplorerChartInfoTooltip
            aggregationInterval="1h"
            chartFunction="sum nginx.access.body_sent.bytes"
            entityFields={
              Array [
                Object {
                  "fieldName": "nginx.access.remote_ip",
                  "fieldValue": "72.57.0.53",
                },
              ]
            }
            jobId="population-03"
          />
        }
        css="unknown styles"
        position="top"
        size="s"
      />
    </span>
  </span>
</Fragment>
`;

exports[`ExplorerChartLabelBadge Render the chart label in two lines. 1`] = `
<Fragment>
  <span>
    <span>
      high_sum(nginx.access.body_sent.bytes) over nginx.access.remote_ip (population-03)
       
    </span>
    <span>
      <EuiIconTip
        content={
          <ExplorerChartInfoTooltip
            aggregationInterval="1h"
            chartFunction="sum nginx.access.body_sent.bytes"
            entityFields={
              Array [
                Object {
                  "fieldName": "nginx.access.remote_ip",
                  "fieldValue": "72.57.0.53",
                },
              ]
            }
            jobId="population-03"
          />
        }
        css="unknown styles"
        position="top"
        size="s"
      />
    </span>
  </span>
  <span
    css="unknown styles"
  >
    <ExplorerChartLabelBadge
      entity={
        Object {
          "$$hashKey": "object:813",
          "fieldName": "nginx.access.remote_ip",
          "fieldValue": "72.57.0.53",
        }
      }
    />
     
  </span>
</Fragment>
`;
